Remove Capabilities. Use Attachments